[project]
name = "pistom"
version = "0.2.0"
description = "Piston API MCP server to enable LLMs to run Python code."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
]


[project.scripts]
pistom = "pistom.server:main"
